Did a complete redesign to the code so there will be a 'doubledrive' library that is able to provide a cloud ransomware functionallity for multiple cloud drive services. Currently implemented only for OneDrive. The specific functionallity for the onedrive doubledrive ransomware tool starting from the initial access to the victim endpoint has been moved into 'onedrive_doubledrive'

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,6 @@ dmypy.json
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+# OneDrive's DoubleDrive generated options
+onedrive_doubledrive/options.py
